@@ -34,6 +34,16 @@ import de.claas.parser.visitors.UpdateNonTerminalReferences;
  */
 public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 
+	private static final String BRACKET_LEFT = "[";
+	private static final String BRACKET_RIGHT = "]";
+	private static final String PARENTHESES_LEFT = "(";
+	private static final String PARENTHESES_RIGHT = ")";
+	private static final String POINT = ".";
+	private static final String DASH = "-";
+	private static final String SLASH = "/";
+	private static final String PERCENT = "%";
+	private static final String CASE_SENSITIVE = "%s";
+	private static final String CASE_INSENSITIVE = "%i";
 	private final Map<String, NonTerminal> rules = new HashMap<>();
 
 	/**
@@ -104,7 +114,7 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		case "hexdig":
 			return new Function<NonTerminalNode, Rule>() {
 				@Override
-				public Rule apply(NonTerminalNode t) {
+				public Rule apply(NonTerminalNode node) {
 					return null;
 				}
 			};
@@ -113,6 +123,14 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		}
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "rulelist".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule(s) that the specified node represents
+	 */
 	private Rule visitRulelist(NonTerminalNode node) {
 		if (!node.hasChildren()) {
 			String msg = "At least one rule is required!";
@@ -122,43 +140,49 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		Rule firstRule = null;
 		Iterator<Node> children = node.iterator();
 		while (children.hasNext()) {
-			Node child = children.next();
+			Node child = nextChild(true, null, children);
 			expectNonTerminalNode("rule");
 			if (isExpected(child)) {
 				child.visit(this);
-				if (firstRule == null)
+				if (firstRule == null) {
 					firstRule = getResult();
+				}
 				continue;
 			}
 
 			// skip whitespace
-			expectNonTerminalNode("c-wsp");
-			while (isExpected(child) && children.hasNext()) {
-				child.visit(this);
-				child = children.next();
-			}
+			child = skipWhitespace(child, children);
 			expectNonTerminalNode("c-nl");
 			child.visit(this);
 		}
 
 		// update references to NonTerminals
-		if (firstRule != null)
+		if (firstRule != null) {
 			firstRule.visit(new UpdateNonTerminalReferences(this.rules.values()));
+		}
 		return firstRule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "rule".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitRule(NonTerminalNode node) {
 		NonTerminal rule = null;
 		String ruleName = null;
 		boolean alternative = false;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("rulename");
 		if (child != null) {
 			child.visit(this);
 			ruleName = concatTerminals(child);
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		expectNonTerminalNode("defined-as");
@@ -166,7 +190,7 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 			child.visit(this);
 			String definedAs = concatTerminals(child);
 			alternative = "/=".equalsIgnoreCase(definedAs);
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		expectNonTerminalNode("elements");
@@ -179,7 +203,7 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 				rule = new NonTerminal(ruleName, getResult());
 			}
 			this.rules.put(ruleName, rule);
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		expectNonTerminalNode("c-nl");
@@ -189,62 +213,56 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "elements".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitElements(NonTerminalNode node) {
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("alternation");
 		if (child != null) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
-		expectNonTerminalNode("c-wsp");
-		while (child != null && isExpected(child) && children.hasNext()) {
-			child.visit(this);
-			child = children.next();
-		}
+		child = skipWhitespace(child, children);
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "alternation".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitAlternation(NonTerminalNode node) {
 		boolean createdDisjunction = false;
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("concatenation");
 		if (child != null) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		while (child != null && rule != null) {
-			expectNonTerminalNode("c-wsp");
-			while (child != null && isExpected(child) && children.hasNext()) {
-				child.visit(this);
-				child = children.next();
-			}
+			child = skipWhitespace(child, children);
+			child = testTerminal(child, children, SLASH, false);
 
-			expectTerminalNode();
-			if (child != null) {
-				String slash = concatTerminals(child);
-				if (!"/".equals(slash)) {
-					String msg = String.format("Expected forward slash '/', but got '%s'", slash);
-					throw new InterpreterException(msg);
-				}
-				child = children.hasNext() ? children.next() : null;
-			}
-
-			expectNonTerminalNode("c-wsp");
-			while (child != null && isExpected(child) && children.hasNext()) {
-				child.visit(this);
-				child = children.next();
-			}
-
+			child = skipWhitespace(child, children);
 			expectNonTerminalNode("concatenation");
 			if (child != null) {
 				child.visit(this);
@@ -253,31 +271,39 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 					createdDisjunction = true;
 				}
 				rule.addChild(getResult());
-				child = children.hasNext() ? children.next() : null;
+				child = nextChild(true, null, children);
 			}
 		}
 
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "concatenation".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitConcatenation(NonTerminalNode node) {
 		boolean createdConjunction = false;
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("repetition");
 		if (child != null) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		while (child != null && rule != null) {
 			expectNonTerminalNode("c-wsp");
 			do {
 				child.visit(this);
-				child = children.hasNext() ? children.next() : null;
+				child = nextChild(true, null, children);
 			} while (child != null && isExpected(child));
 
 			expectNonTerminalNode("repetition");
@@ -288,20 +314,27 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 					createdConjunction = true;
 				}
 				rule.addChild(getResult());
-				child = children.hasNext() ? children.next() : null;
+				child = nextChild(true, null, children);
 			}
-
 		}
 
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "repetition".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitRepetition(NonTerminalNode node) {
 		Rule rule = null;
 		int minRepetitions = 1;
 		int maxRepetitions = 1;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("repeat");
 		if (child != null && isExpected(child)) {
@@ -309,21 +342,30 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 			Repetition dummy = (Repetition) getResult();
 			minRepetitions = dummy.getMinimumNumberOfRepetions();
 			maxRepetitions = dummy.getMaximumNumberOfRepetions();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		expectNonTerminalNode("element");
 		if (child != null) {
 			child.visit(this);
-			if (minRepetitions == 1 && maxRepetitions == 1)
+			if (minRepetitions == 1 && maxRepetitions == 1) {
 				rule = getResult();
-			else
+			} else {
 				rule = new Repetition(getResult(), minRepetitions, maxRepetitions);
-			child = children.hasNext() ? children.next() : null;
+			}
+			child = nextChild(true, null, children);
 		}
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "repeat".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitRepeat(NonTerminalNode node) {
 		Rule rule = null;
 		String repeat = concatTerminals(node);
@@ -331,11 +373,11 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		if (starIndex >= 0) {
 			String min = repeat.substring(0, starIndex);
 			String max = repeat.substring(starIndex + 1);
-			int minRepetitions = !min.isEmpty() ? new Integer(min).intValue() : 0;
-			int maxRepetitions = !max.isEmpty() ? new Integer(max).intValue() : Integer.MAX_VALUE;
+			int minRepetitions = min.isEmpty() ? 0 : Integer.valueOf(min).intValue();
+			int maxRepetitions = max.isEmpty() ? Integer.MAX_VALUE : Integer.valueOf(max).intValue();
 			rule = new Repetition(null, minRepetitions, maxRepetitions);
 		} else if (!repeat.isEmpty()) {
-			int repetitions = new Integer(repeat).intValue();
+			int repetitions = Integer.valueOf(repeat).intValue();
 			rule = new Repetition(null, repetitions, repetitions);
 		} else {
 			throw new InterpreterException("Invalid 'repeat'-rule: " + repeat);
@@ -343,153 +385,129 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "element".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitElement(NonTerminalNode node) {
 		Rule rule = null;
+		String ruleName = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("rulename");
 		if (child != null && isExpected(child)) {
-			String ruleName = concatTerminals(child);
+			ruleName = concatTerminals(node);
 			if (!this.rules.containsKey(ruleName)) {
 				this.rules.put(ruleName, new NonTerminal(ruleName));
 			}
 			rule = this.rules.get(ruleName);
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
 		expectNonTerminalNode("group", "option", "char-val", "num-val", "prose-val");
 		if (child != null && isExpected(child)) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "group".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitGroup(NonTerminalNode node) {
-		// "(" *c-wsp alternation *c-wsp ")"
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
+		child = testTerminal(child, children, PARENTHESES_LEFT, false);
 
-		expectTerminalNode();
-		if (child != null) {
-			String bracket = concatTerminals(child);
-			if (!"(".equals(bracket)) {
-				String msg = String.format("Expected opening bracket '(', but got '%s'", bracket);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
-
-		expectNonTerminalNode("c-wsp");
-		while (child != null && isExpected(child) && children.hasNext()) {
-			child.visit(this);
-			child = children.next();
-		}
-
+		child = skipWhitespace(child, children);
 		expectNonTerminalNode("alternation");
 		if (child != null) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
-		expectNonTerminalNode("c-wsp");
-		while (child != null && isExpected(child) && children.hasNext()) {
-			child.visit(this);
-			child = children.next();
-		}
-
-		expectTerminalNode();
-		if (child != null) {
-			String bracket = concatTerminals(child);
-			if (!")".equals(bracket)) {
-				String msg = String.format("Expected closing bracket ')', but got '%s'", bracket);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
+		child = skipWhitespace(child, children);
+		child = testTerminal(child, children, PARENTHESES_RIGHT, false);
 
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "option".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitOption(NonTerminalNode node) {
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
+		child = testTerminal(child, children, BRACKET_LEFT, false);
 
-		expectTerminalNode();
-		if (child != null) {
-			String bracket = concatTerminals(child);
-			if (!"[".equals(bracket)) {
-				String msg = String.format("Expected opening bracket '[', but got '%s'", bracket);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
-
-		expectNonTerminalNode("c-wsp");
-		while (child != null && isExpected(child) && children.hasNext()) {
-			child.visit(this);
-			child = children.next();
-		}
-
+		child = skipWhitespace(child, children);
 		expectNonTerminalNode("alternation");
 		if (child != null) {
 			child.visit(this);
 			rule = new Optional(getResult());
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 
-		expectNonTerminalNode("c-wsp");
-		while (child != null && isExpected(child) && children.hasNext()) {
-			child.visit(this);
-			child = children.next();
-		}
-
-		expectTerminalNode();
-		if (child != null) {
-			String bracket = concatTerminals(child);
-			if (!"]".equals(bracket)) {
-				String msg = String.format("Expected closing bracket ']', but got '%s'", bracket);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
-
+		child = skipWhitespace(child, children);
+		child = testTerminal(child, children, BRACKET_RIGHT, false);
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "char-val".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitCharVal(NonTerminalNode node) {
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
+		Node child = nextChild(true, null, children);
 
 		expectNonTerminalNode("case-insensitive-string", "case-sensitive-string");
 		if (child != null) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "case-insensitive-string".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitCaseInsensitiveString(NonTerminalNode node) {
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
-
-		expectTerminalNode();
-		if (child != null && isExpected(child)) {
-			String marker = concatTerminals(child);
-			if (!"%i".equals(marker)) {
-				String msg = String.format("Expected case insensitivity marker '%%i', but got '%s'", marker);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
+		Node child = nextChild(true, null, children);
+		child = testTerminal(child, children, CASE_INSENSITIVE, true);
 
 		expectNonTerminalNode("quoted-string");
 		if (child != null) {
@@ -506,20 +524,19 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "case-sensitive-string".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitCaseSensitiveString(NonTerminalNode node) {
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
-
-		expectTerminalNode();
-		if (child != null) {
-			String marker = concatTerminals(child);
-			if (!"%s".equals(marker)) {
-				String msg = String.format("Expected case sensitivity marker '%%s', but got '%s'", marker);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
+		Node child = nextChild(true, null, children);
+		child = testTerminal(child, children, CASE_SENSITIVE, false);
 
 		expectNonTerminalNode("quoted-string");
 		if (child != null) {
@@ -536,122 +553,73 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "num-val".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitNumVal(NonTerminalNode node) {
 		Rule rule = null;
 		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
-
-		expectTerminalNode();
-		if (child != null) {
-			String marker = concatTerminals(child);
-			if (!"%".equals(marker)) {
-				String msg = String.format("Expected number marker '%%', but got '%s'", marker);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
+		Node child = nextChild(true, null, children);
+		child = testTerminal(child, children, PERCENT, false);
 
 		expectNonTerminalNode("bin-val", "dec-val", "hex-val");
 		if (child != null && isExpected(child)) {
 			child.visit(this);
 			rule = getResult();
-			child = children.hasNext() ? children.next() : null;
+			child = nextChild(true, null, children);
 		}
 		return rule;
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "bin-val".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitBinVal(NonTerminalNode node) {
 		return visitNumericVal(node, "b", "bit", 2);
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "dec-val".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitDecVal(NonTerminalNode node) {
 		return visitNumericVal(node, "d", "digit", 10);
 	}
 
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "hex-val".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitHexVal(NonTerminalNode node) {
 		return visitNumericVal(node, "x", "hexdig", 16);
 	}
 
-	private Rule visitNumericVal(NonTerminalNode node, String expectedMarker, String expectedNonTerminal, int radix) {
-		List<String> terminals = new ArrayList<>();
-		int rangeStart = -1;
-		int rangeEnd = -1;
-		Iterator<Node> children = node.iterator();
-		Node child = children.hasNext() ? children.next() : null;
-
-		expectTerminalNode();
-		if (child != null) {
-			String marker = concatTerminals(child);
-			if (!expectedMarker.equals(marker)) {
-				String msg = String.format("Expected number marker '%s', but got '%s'", expectedMarker, marker);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
-
-		StringBuilder digits = new StringBuilder();
-		expectNonTerminalNode(expectedNonTerminal);
-		while (child != null && isExpected(child)) {
-			child.visit(this);
-			String bit = concatTerminals(child);
-			digits.append(bit);
-			child = children.hasNext() ? children.next() : null;
-		}
-		rangeStart = Integer.parseInt(digits.toString(), radix);
-		terminals.add("" + (char) rangeStart);
-
-		expectTerminalNode();
-		if (child != null) {
-			String marker = concatTerminals(child);
-			child = children.hasNext() ? children.next() : null;
-			if (".".equals(marker)) {
-				rangeStart = -1;
-				do {
-					digits = new StringBuilder();
-					expectNonTerminalNode(expectedNonTerminal);
-					while (child != null && isExpected(child)) {
-						child.visit(this);
-						String bit = concatTerminals(child);
-						digits.append(bit);
-						child = children.hasNext() ? children.next() : null;
-					}
-					terminals.add("" + (char) Integer.parseInt(digits.toString(), radix));
-
-					expectTerminalNode();
-					if (child != null) {
-						String point = concatTerminals(child);
-						if (!".".equals(point)) {
-							String msg = String.format("Expected '.', but got '%s'", point);
-							throw new InterpreterException(msg);
-						}
-						child = children.hasNext() ? children.next() : null;
-					}
-				} while (child != null);
-			} else if ("-".equals(marker)) {
-				terminals.clear();
-				digits = new StringBuilder();
-				expectNonTerminalNode(expectedNonTerminal);
-				while (child != null && isExpected(child)) {
-					child.visit(this);
-					String bit = concatTerminals(child);
-					digits.append(bit);
-					child = children.hasNext() ? children.next() : null;
-				}
-				rangeEnd = Integer.parseInt(digits.toString(), radix);
-			} else {
-				String msg = String.format("Expected either '.' or '-', but got '%s'", marker);
-				throw new InterpreterException(msg);
-			}
-			child = children.hasNext() ? children.next() : null;
-		}
-
-		if (rangeStart >= 0 && rangeEnd >= rangeStart) {
-			for (int number = rangeStart; number <= rangeEnd; number++)
-				terminals.add("" + (char) number);
-		}
-		return CharacterValue.alternatives(true, terminals.toArray(new String[0]));
-	}
-
+	/**
+	 * Called by this interpreter with the intention of interpreting
+	 * {@link NonTerminalNode}-nodes of type "prose-val".
+	 * 
+	 * @param node
+	 *            the node
+	 * @return the rule that the specified node represents
+	 */
 	private Rule visitProseVal(NonTerminalNode node) {
 		Rule rule = null;
 
@@ -664,6 +632,152 @@ public class AugmentedBackusNaurInterpreter extends Interpreter<Rule> {
 			throw new InterpreterException("Expected 'prose-val' to start with '<' and end with '>', but it did not.");
 		}
 		return rule;
+	}
+
+	/**
+	 * A support method that tries to process the specified node as numeric
+	 * value of the specified type (i.e. radix, marker, etc.).
+	 * 
+	 * @param node
+	 *            the node
+	 * @param expectedMarker
+	 *            the expected marker (e.g. "b" for binary values)
+	 * @param expectedNonTerminal
+	 *            the expected non-terminal (e.g. "bit" for binary values)
+	 * @param radix
+	 *            the radix of the numeric value (e.g. 2 for binary values)
+	 * @return the rule that the specified node represents
+	 */
+	private Rule visitNumericVal(NonTerminalNode node, String expectedMarker, String expectedNonTerminal, int radix) {
+		List<String> terminals = new ArrayList<>();
+		int rangeStart = -1;
+		int rangeEnd = -1;
+		Iterator<Node> children = node.iterator();
+		Node child = nextChild(true, null, children);
+
+		child = testTerminal(child, children, expectedMarker, false);
+
+		StringBuilder digits = new StringBuilder();
+		expectNonTerminalNode(expectedNonTerminal);
+		while (child != null && isExpected(child)) {
+			child.visit(this);
+			String bit = concatTerminals(child);
+			digits.append(bit);
+			child = nextChild(true, null, children);
+		}
+		rangeStart = Integer.parseInt(digits.toString(), radix);
+		terminals.add("" + (char) rangeStart);
+
+		expectTerminalNode();
+		if (child != null) {
+			String marker = concatTerminals(child);
+			child = nextChild(true, null, children);
+			if (POINT.equals(marker)) {
+				rangeStart = -1;
+				do {
+					digits = new StringBuilder();
+					expectNonTerminalNode(expectedNonTerminal);
+					while (child != null && isExpected(child)) {
+						child.visit(this);
+						String bit = concatTerminals(child);
+						digits.append(bit);
+						child = nextChild(true, null, children);
+					}
+					terminals.add("" + (char) Integer.parseInt(digits.toString(), radix));
+
+					child = testTerminal(child, children, POINT, false);
+				} while (child != null);
+			} else if (DASH.equals(marker)) {
+				terminals.clear();
+				digits = new StringBuilder();
+				expectNonTerminalNode(expectedNonTerminal);
+				while (child != null && isExpected(child)) {
+					child.visit(this);
+					String bit = concatTerminals(child);
+					digits.append(bit);
+					child = nextChild(true, null, children);
+				}
+				rangeEnd = Integer.parseInt(digits.toString(), radix);
+			} else {
+				String msg = String.format("Expected either '.' or '-', but got '%s'", marker);
+				throw new InterpreterException(msg);
+			}
+			child = nextChild(true, null, children);
+		}
+
+		if (rangeStart >= 0 && rangeEnd >= rangeStart) {
+			for (int number = rangeStart; number <= rangeEnd; number++) {
+				terminals.add("" + (char) number);
+			}
+		}
+		return CharacterValue.alternatives(true, terminals.toArray(new String[0]));
+	}
+
+	/**
+	 * A support function that tries to simplify the process of moving to the
+	 * next child. Returns the next child if the condition is fulfilled and
+	 * there is a next child. Otherwise, the current / most recent child is
+	 * returned.
+	 * 
+	 * @param condition
+	 *            whether the next child should be attempted to be retrieved
+	 * @param child
+	 *            the current / most recent child
+	 * @param children
+	 *            the "list" of children
+	 * @return the next child if the condition is fulfilled and there is a next
+	 *         child, otherwise the current / most recent child
+	 */
+	private static Node nextChild(boolean condition, Node child, Iterator<Node> children) {
+		return condition && children.hasNext() ? children.next() : child;
+	}
+
+	/**
+	 * A support function that skips any number of "c-wsp"-nodes. Returns the
+	 * first child is not a "c-wsp"-node.
+	 * 
+	 * @param child
+	 *            the current / most recent child
+	 * @param children
+	 *            the "list" of children
+	 * @return the first child that is not a "c-wsp"-node
+	 */
+	private Node skipWhitespace(Node child, Iterator<Node> children) {
+		Node localChild = child;
+		expectNonTerminalNode("c-wsp");
+		while (localChild != null && isExpected(localChild) && children.hasNext()) {
+			localChild.visit(this);
+			localChild = children.next();
+		}
+		return localChild;
+	}
+
+	/**
+	 * A support function that test if the given Node corresponds to an expected
+	 * terminal symbol.
+	 * 
+	 * @param child
+	 *            the current / most recent child
+	 * @param children
+	 *            the "list" of children
+	 * @param expected
+	 *            the expected terminal symbol
+	 * @param optional
+	 *            whether the expected terminal symbol is optional
+	 * @return the next child
+	 */
+	private Node testTerminal(Node child, Iterator<Node> children, String expected, boolean optional) {
+		Node localChild = child;
+		expectTerminalNode();
+		if (localChild != null && (!optional || isExpected(localChild))) {
+			String actual = concatTerminals(localChild);
+			if (!expected.equals(actual)) {
+				String msg = String.format("Expected '%s', but got '%s'", expected, actual);
+				throw new InterpreterException(msg);
+			}
+			localChild = nextChild(true, null, children);
+		}
+		return localChild;
 	}
 
 }
